# SlicerLegacyModules

./: CMakeLists.txt  README.md
Modules/CLI/BlobDetection/: CMakeLists.txt
Modules/CLI/ConnectedComponent/: CMakeLists.txt
